--- a/DCTheMovie/DCTheMovie/Base.lproj/Main.storyboard
+++ b/DCTheMovie/DCTheMovie/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wnZ-7C-UKP">
                                                     <rect key="frame" x="284" y="0.0" width="75" height="120"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36r-Zi-umr">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="36r-Zi-umr">
                                                     <rect key="frame" x="8" y="8" width="268" height="21"/>
                                                     <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -149,8 +149,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="422"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="es1-Y2-Wdc">
-                                            <rect key="frame" x="0.0" y="8" width="375" height="31.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="es1-Y2-Wdc">
+                                            <rect key="frame" x="8" y="8" width="359" height="31.5"/>
                                             <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="24"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -167,14 +167,13 @@
                                         <constraint firstAttribute="bottom" secondItem="hKu-Ke-pnz" secondAttribute="bottom" constant="8" id="1MS-PQ-uZm"/>
                                         <constraint firstItem="es1-Y2-Wdc" firstAttribute="centerX" secondItem="EFs-Mb-kaz" secondAttribute="centerX" id="PXZ-T8-HMp"/>
                                         <constraint firstItem="hKu-Ke-pnz" firstAttribute="top" secondItem="es1-Y2-Wdc" secondAttribute="bottom" constant="8" id="RCB-uy-0kb"/>
+                                        <constraint firstAttribute="trailing" secondItem="es1-Y2-Wdc" secondAttribute="trailing" constant="8" id="bNo-Gy-odV"/>
                                         <constraint firstItem="hKu-Ke-pnz" firstAttribute="leading" secondItem="EFs-Mb-kaz" secondAttribute="leading" constant="8" id="ikz-cz-k6I"/>
                                         <constraint firstAttribute="trailing" secondItem="hKu-Ke-pnz" secondAttribute="trailing" constant="8" id="qKW-bf-6Jw"/>
                                         <constraint firstItem="es1-Y2-Wdc" firstAttribute="top" secondItem="EFs-Mb-kaz" secondAttribute="top" constant="8" id="sp3-uk-kXC"/>
+                                        <constraint firstItem="es1-Y2-Wdc" firstAttribute="leading" secondItem="EFs-Mb-kaz" secondAttribute="leading" constant="8" id="tIn-MA-b0H"/>
                                     </constraints>
                                 </view>
-                                <constraints>
-                                    <constraint firstItem="es1-Y2-Wdc" firstAttribute="width" secondItem="nJS-8z-zno" secondAttribute="width" id="zq7-Ca-Py1"/>
-                                </constraints>
                                 <blurEffect style="light"/>
                             </visualEffectView>
                         </subviews>
